--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
     <div id="new-content-1" class="new-content" style="display: none;">
         <!-- Treść do wyświetlenia po kliknięciu przycisku 1 -->
         <h1>Uczniowie</h1>
-        <p>imie nazwisko</p>
             <ul>
                 <li>
                     Bartosz Borodziej
@@ -55,7 +54,7 @@
                     Arsen Priadka
                 </li>
                 <li>
-                    Sergiusz Sałasiński
+                    Sergiusz Sałasiński 
                 </li>
                 <li>
                     Mikhail Siruts
@@ -87,6 +86,7 @@
     </div>
     <div id="new-content-3" class="new-content" style="display: none;">
         <!-- Treść do wyświetlenia po kliknięciu przycisku 3 -->
+        <!--jesli to czytasz to jestes sigma co cos robisz xD -->
         <h1>informacje o szkole</h1>
         <p>strona szkoły itp itd</p>
     </div>
