--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     Damir Sydorchuk
                 </li>
                 <li>
-                    Damian T(nie wiem jak się pisze jego nazwisko)
+                    Damian Terro z chin(nie wiem jak się pisze jego nazwisko)
                 </li>
                 <li>
                     Michał Wojciechowski
