--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <h1>informacje o szkole</h1>
         <p>strona szkoły itp itd</p>
     </div>
-    <h1 id="costam">costam</h1>
+    <h1 id="costam"></h1>
 
     <script src="script.js"></script>
 </body>
