--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
     <div id="new-content-1" class="new-content" style="display: none;">
         <!-- Treść do wyświetlenia po kliknięciu przycisku 1 -->
-        <h1>Uczniowie</h1>
+        <h1>Uczniowie 2P:</h1>
             <ul>
                 <li>
                     Bartosz Borodziej
