--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Klasa 2P</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="https://github.com/bh0per/randomshit/blob/main/output-onlinepngtools.png?raw=true">
+    <script src="chatbot.js"></script>
 
 </head>
 <body>
