--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="https://github.com/bh0per/randomshit/blob/main/output-onlinepngtools.png?raw=true">
     <script src="chatbot.js"></script>
+    <style>
+        #map{
+            height: 200px;
+            width:25%;
+        }
+    </style>
 
 </head>
 <body>
@@ -103,7 +109,9 @@
         <!-- Treść do wyświetlenia po kliknięciu przycisku 3 -->
         <!--jesli to czytasz to jestes sigma co cos robisz xD -->
         <h1>informacje o szkole</h1>
-        <p>strona szkoły itp itd</p>
+        <p>W najbliższych dniach uzupełnienie informacji,aktualnie prace w toku....</p>
+        <div id="map"></div>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCxoU58ln4WfJmrOuacViBBjRTW3p162g&callback=initMap" async defer></script>
     </div>
     <h1 id="costam"></h1>
 
