--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="https://github.com/bh0per/randomshit/blob/main/output-onlinepngtools.png?raw=true">
     <script src="chatbot.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         #map{
             height: 200px;
