--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     Damir Sydorchuk
                 </li>
                 <li>
-                    Damian Terro z chin(nie wiem jak się pisze jego nazwisko)
+                   Damian Terokhin
                 </li>
                 <li>
                     Michał Wojciechowski
@@ -110,7 +110,18 @@
         <!-- Treść do wyświetlenia po kliknięciu przycisku 3 -->
         <!--jesli to czytasz to jestes sigma co cos robisz xD -->
         <h1>informacje o szkole</h1>
-        <p>W najbliższych dniach uzupełnienie informacji,aktualnie prace w toku....</p>
+        <p>Nasza szkoła znajduje się na starówce niedaleko kolumny Zygmunta.Na ulicy Podwale 13 w Warszawie.</p>
+        <p>W zdz mamy kierunki takie jak:</p>
+        <ul>
+            <li>Technik informatyk</li>
+            <li>Technik programista</li>
+            <li>Technik </li>
+            <li>Technik </li>
+            <li>Technik grafiki i poligrafii cyfrowej</li>
+            <li>Technik elektryk</li>
+            <li>Liceum Ogolnokształczoce</li>
+        </ul>
+
         <div id="map"></div>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCxoU58ln4WfJmrOuacViBBjRTW3p162g&callback=initMap" async defer></script>
     </div>
