--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </header>
     <div id="new-content-1" class="new-content" style="display: none;">
         <!-- Treść do wyświetlenia po kliknięciu przycisku 1 -->
-        <h1>Uczniowie</h1>
+        <h1>Uczniowie:</h1>
             <ul>
                 <li>
                     Bartosz Borodziej
@@ -91,7 +91,7 @@
     </div>
     <div id="new-content-2" class="new-content" style="display: none;">
         <!-- Treść do wyświetlenia po kliknięciu przycisku 2 -->
-        <h1>Osiągnięcia uczniów z klasy</h1>
+        <h1>Osiągnięcia uczniów z klasy 2P:</h1>
         
         <div class="achievement">
             <img src="https://github.com/bh0per/randomshit/blob/main/479464633_1081341563796521_5833601233885530731_n.jpg?raw=true" alt="Zdjęcie Jakuba Wolskiego">
@@ -116,11 +116,11 @@
         <ul>
             <li>Technik informatyk</li>
             <li>Technik programista</li>
-            <li>Technik </li>
-            <li>Technik </li>
-            <li>Technik grafiki i poligrafii cyfrowej</li>
-            <li>Technik elektryk</li>
-            <li>Liceum Ogolnokształczoce</li>
+            <li>Technik realizacji nagłośnień </li>
+            <li>Technik realizacji nagrań</li>
+            <li>Technik usług fryzjerskich</li>
+            <li>Technik żywienia i usług gastronomicznych</li>
+            <li>Liceum Ogólnokształczące psychologiczno-pedagogiczne</li>
         </ul>
 
     </div>
