--- a/index.html
+++ b/index.html
@@ -108,7 +108,18 @@
         <!-- Treść do wyświetlenia po kliknięciu przycisku 3 -->
         <!--jesli to czytasz to jestes sigma co cos robisz xD -->
         <h1>informacje o szkole</h1>
-        <p>strona szkoły itp itd</p>
+        <p>Nasza szkoła znajduje się na starówce niedaleko kolumny Zygmunta.Na ulicy Podwale 13 w Warszawie.</p>
+        <p>W zdz mamy kierunki takie jak:</p>
+        <ul>
+            <li>Technik informatyk</li>
+            <li>Technik programista</li>
+            <li>Technik realizacji nagłośnień </li>
+            <li>Technik realizacji nagrań</li>
+            <li>Technik usług fryzjerskich</li>
+            <li>Technik żywienia i usług gastronomicznych</li>
+            <li>Liceum Ogólnokształczące psychologiczno-pedagogiczne</li>
+        </ul>
+        
     </div>
     <h1 id="costam"></h1>
 
