--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
     <div id="new-content-1" class="new-content" style="display: none;">
         <!-- Treść do wyświetlenia po kliknięciu przycisku 1 -->
-        <h1>Uczniowie</h1>
+        <h1>Uczniowie:</h1>
             <ul>
                 <li>
                     Bartosz Borodziej
@@ -70,7 +70,7 @@
                     Damir Sydorchuk
                 </li>
                 <li>
-                    Damian Terro z chin(nie wiem jak się pisze jego nazwisko)
+                    Damian Terokhin
                 </li>
                 <li>
                     Michał Wojciechowski
@@ -85,7 +85,7 @@
     </div>
     <div id="new-content-2" class="new-content" style="display: none;">
         <!-- Treść do wyświetlenia po kliknięciu przycisku 2 -->
-        <h1>Osiągnięcia uczniów z klasy</h1>
+        <h1>Osiągnięcia uczniów z klasy 2P:</h1>
 
         <div class="achievement">
             <img src="https://github.com/bh0per/randomshit/blob/main/479464633_1081341563796521_5833601233885530731_n.jpg?raw=true" alt="Zdjęcie Jakuba Wolskiego">
@@ -107,7 +107,7 @@
 
         <!-- Treść do wyświetlenia po kliknięciu przycisku 3 -->
         <!--jesli to czytasz to jestes sigma co cos robisz xD -->
-        <h1>informacje o szkole</h1>
+        <h1>informacje o szkole:</h1>
         <p>Nasza szkoła znajduje się na starówce niedaleko kolumny Zygmunta.Na ulicy Podwale 13 w Warszawie.</p>
         <p>W zdz mamy kierunki takie jak:</p>
         <ul>
