--- a/index.html
+++ b/index.html
@@ -87,12 +87,14 @@
     <div id="new-content-3-1" class="new-content" style="display: none;">
         <h1>Cyber Security</h1>
         <ul>
-            <li class="content-item">Wstęp</li>
-            <li class="content-item">Zagrożenia</li>
-            <li class="content-item">Ochrona danych</li>
-            <li class="content-item">Bezpieczne hasła</li>
+            <li><a href="siec.html">Sieć</a></li>
+            <li><a href="bruteforce.html">Brute Force</a></li>
+            <li><a href="wirusy.html">Wirusy</a></li>
+            <li><a href="phishing.html">Phishing</a></li>
+            <li><a href= "tools.html">Narzędzia</a></li>
         </ul>
-        <p>Tu będzie treść o cyberbezpieczeństwie...</p>
+    </div>
+    
     </div>
 
     <div id="new-content-3-2" class="new-content" style="display: none;">
